# devsmtp

./: Cargo.toml  Dockerfile
.cargo/: config.toml
examples/: client.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/src/lib/components/: app-sidebar.svelte  login-form.svelte  nav-user.svelte
frontend/src/routes/login-04/: +page.svelte
frontend/src/routes/sidebar-09/: +page.svelte
src/: command.rs  handler.rs  main.rs  utils.rs
src/server/: mod.rs
src/server/routes/: emails.rs  mod.rs  notifications.rs
src/smtp/: handler.rs  mod.rs
