[package]
name = "devsmtp"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11.12", features = ["serde", "tokio1-native-tls"] }
mail-parser = { version = "0.10.2", features = ["serde_support"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal", "full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
